# Orlice

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
deployment/: compose.yml
resources/generation/: definition.csv
resources/map/: water_bodies.csv
resources/savegame/: ai  egpyt.txt  meta
src/: eu4_province_reader.rs  eu4_save_parser.rs  game_types.rs  image_generator.rs  lib.rs  main.rs  map_converter.rs  savegame_reader.rs
www/: index.html  index.js  package-lock.json  package.json
www/public/data/: coord_id_map.csv
